--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     }
 
     .circle {
+        /* box-sizing: border-box;
+        line-height: 26px; */
         background-color: white;
         border: 2px solid black;
         border-radius: 50%;
